--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <textarea id="messageInput" name="message" required></textarea>
 
         <input type="submit" value="Send">
-        <p>Email: <a href="iriswanniang.com">iriswanniang.com</a></p>
+        <p>Email: <a href="iriswanniang@gmail.com">iriswanniang@gmail.com</a></p>
       <p>Phone: <a href="tel:8119070538">8119070538</a></p>
       </form>
     </section>
